--- a/BullyBookWeb/appsettings.json
+++ b/BullyBookWeb/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;DataBase=Bulky;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;DataBase=Bulky;Trusted_Connection=True;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BullyBookWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
